syntax = "proto3";
package protos;
message msg
{
	int32 msgType = 1;
	string msgInfo = 2;
	string msgFrom = 3;
}
